--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Katy Manualidades</title>
         <link rel="stylesheet" href="styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
-        
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <h1>Katty Manualidades</h1>
