cambios en el head

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta name="author" content="Diaz Nahuel">
+        <meta name="description" content="Accesorios en macrame, aros, pulceras,tobilleras y mas. Todas mis creaciones son artesanales y hechas a mano.">
         <meta charset="utf-8">
-        <title>Katy Manualidades</title>
+        <title>Katty Manualidades</title>
         <link rel="stylesheet" href="styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="https://nahueld97.github.io/images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="https://nahueld97.github.io/images/favicon.ico" type="image/x-icon">
+
+        <meta property="og:image" content="https://nahueld97.github.io/images/Logo.png">
+        <meta property="og:description" content="Accesorios en macrame, aros, pulceras,tobilleras y mas. Todas mis creaciones son artesanales y hechas a mano.">
+        <meta property="og:title" content="Katty Manualidades">
+        
     </head>
     <body>
         <h1>Katty Manualidades</h1>
