--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Katty Manualidades</title>
         <link rel="stylesheet" href="styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="https://nahueld97.github.io/images/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="https://nahueld97.github.io/images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="https://nahueld97.github.io/images/favicon.png" type="image/x-icon">
+        <link rel="icon" href="https://nahueld97.github.io/images/favicon.png" type="image/x-icon">
 
         <meta property="og:image" content="https://nahueld97.github.io/images/Logo.png">
         <meta property="og:description" content="Accesorios en macrame, aros, pulceras,tobilleras y mas. Todas mis creaciones son artesanales y hechas a mano.">
