--- a/index.html
+++ b/index.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta name="author" content="Diaz Nahuel">
-        <meta name="description" content="Accesorios en macrame, aros, pulceras,tobilleras y mas. Todas mis creaciones son artesanales y hechas a mano.">
-        <meta charset="utf-8">
-        <title>Katty Manualidades</title>
-        <link rel="stylesheet" href="styles/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="https://nahueld97.github.io/images/favicon.png" type="image/x-icon">
-        <link rel="icon" href="https://nahueld97.github.io/images/favicon.png" type="image/x-icon">
 
-        <meta property="og:image" content="https://nahueld97.github.io/images/Logo.png">
-        <meta property="og:description" content="Accesorios en macrame, aros, pulceras,tobilleras y mas. Todas mis creaciones son artesanales y hechas a mano.">
-        <meta property="og:title" content="Katty Manualidades">
-        
-    </head>
-    <body>
-        <h1>Katty Manualidades</h1>
-        <img src="images/Logo.png" alt="logoimg : un gato negro con ojos amarillos">
-        <p>Este es un test de pagina para Luz para promocionar sus trabajos en macrame :D</p>
-        <script src="scripts/script.js"></script>
-    </body>
+<head>
+    <meta name="author" content="Diaz Nahuel">
+    <meta name="description" content="Accesorios en macrame, aros, pulceras,tobilleras y mas. Todas mis creaciones son artesanales y hechas a mano.">
+    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8">
+    <title>Katty Manualidades</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="https://nahueld97.github.io/images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="https://nahueld97.github.io/images/favicon.png" type="image/x-icon">
+
+    <meta property="og:image" content="https://nahueld97.github.io/images/Logo.png">
+    <meta property="og:description" content="Accesorios en macrame, aros, pulceras,tobilleras y mas. Todas mis creaciones son artesanales y hechas a mano.">
+    <meta property="og:title" content="Katty Manualidades">
+
+</head>
+
+<body>
+    <header>
+        <img class="logo" src="images/Logo.png" alt="logo - logo katty manualidades">
+        <h1 class="title">Katty Manualidades</h1>
+        <nav>
+            <ul class="nav__links">
+                <li>
+                    <a href="productos.html">Mis Productos</a></li>
+                <li>
+                    <a href="https://api.whatsapp.com/send?phone=+542915244405">Contactame</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quas accusamus sit esse laudantium saepe explicabo quae ab qui illo dolores accusantium, pariatur nisi impedit praesentium natus hic ad repellat!</p>
+
+    <footer></footer>
+</body>
+
 </html>
