--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="author" content="Diaz Nahuel">
     <meta name="description" content="Accesorios en macrame, aros, pulceras,tobilleras y mas. Todas mis creaciones son artesanales y hechas a mano.">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Katty Manualidades</title>
     <link rel="stylesheet" href="styles/style.css">
