--- a/productos.html
+++ b/productos.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <title>Katty Manualidades</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/products.css">
     <link rel="shortcut icon" href="https://nahueld97.github.io/images/favicon.png" type="image/x-icon">
     <link rel="icon" href="https://nahueld97.github.io/images/favicon.png" type="image/x-icon">
 
@@ -31,12 +32,75 @@
         </nav>
     </header>
 
-    <div class="product-container">
+    <!-- <div class="product-container">
         <div class="product">
             <p class="product__text">producto</p>
             <img src="images/ejemplo.jpg" class="product__img">
         </div>
-    </div>
+    </div> -->
+
+    <section class="products">
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+        <div class="product">
+            <h5 class="product__name">
+                pulcera puca
+            </h5>
+            <img src="images/ejemplo.jpg" alt="Product 1" class="product__img" />
+        </div>
+    </section>
 </body>
 
 </html>
