--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
+
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="images/favicon.png" alt="logo - logo katty manualidades" width="50" height="50">
@@ -51,84 +52,126 @@
         </nav>
     </header>
 
-    <section>
+    <section class="main">
         <h2>Ofertas</h2>
+        <div id="slideOfertas" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#slideOfertas" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#slideOfertas" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#slideOfertas" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/ejemplo.jpg" class="d-block w-100" alt="..." height="300">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ejemplo.jpg" class="d-block w-100" alt="..." height="300">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ejemplo.jpg" class="d-block w-100" alt="..." height="300">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#slideOfertas" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#slideOfertas" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
         <hr>
-        <div class="row row-cols-1 row-cols-md-4 g-2">
-            <div class="col">
-                <div class="card m-1">
-                    <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
-                    <div class="card-body">
-                        <h5 class="card-title">Puca</h5>
-                        <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+        <h2>Catalogo</h2>
+        <div style="padding: 0 20px;">
+            <div class="row row-cols-1 row-cols-md-4 g-2">
+                <div class="col">
+                    <div class="card m-1">
+                        <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
+                        <div class="card-body">
+                            <h5 class="card-title">Puca</h5>
+                            <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card m-1">
-                    <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
-                    <div class="card-body">
-                        <h5 class="card-title">Puca</h5>
-                        <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                <div class="col">
+                    <div class="card m-1">
+                        <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
+                        <div class="card-body">
+                            <h5 class="card-title">Puca</h5>
+                            <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card m-1">
-                    <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
-                    <div class="card-body">
-                        <h5 class="card-title">Puca</h5>
-                        <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.
-                        </p>
+                <div class="col">
+                    <div class="card m-1">
+                        <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
+                        <div class="card-body">
+                            <h5 class="card-title">Puca</h5>
+                            <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card m-1">
-                    <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
-                    <div class="card-body">
-                        <h5 class="card-title">Puca</h5>
-                        <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                <div class="col">
+                    <div class="card m-1">
+                        <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
+                        <div class="card-body">
+                            <h5 class="card-title">Puca</h5>
+                            <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card m-1">
-                    <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
-                    <div class="card-body">
-                        <h5 class="card-title">Puca</h5>
-                        <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                <div class="col">
+                    <div class="card m-1">
+                        <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
+                        <div class="card-body">
+                            <h5 class="card-title">Puca</h5>
+                            <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card m-1">
-                    <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
-                    <div class="card-body">
-                        <h5 class="card-title">Puca</h5>
-                        <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                <div class="col">
+                    <div class="card m-1">
+                        <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
+                        <div class="card-body">
+                            <h5 class="card-title">Puca</h5>
+                            <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card m-1">
-                    <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
-                    <div class="card-body">
-                        <h5 class="card-title">Puca</h5>
-                        <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                <div class="col">
+                    <div class="card m-1">
+                        <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
+                        <div class="card-body">
+                            <h5 class="card-title">Puca</h5>
+                            <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card m-1">
-                    <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
-                    <div class="card-body">
-                        <h5 class="card-title">Puca</h5>
-                        <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                <div class="col">
+                    <div class="card m-1">
+                        <img src="images/ejemplo.jpg" class="card-img-top" alt="pulcera">
+                        <div class="card-body">
+                            <h5 class="card-title">Puca</h5>
+                            <p class="card-text">Esta pulcera de puca no la tengo mas pero weno es la unica imagen que tenia pra ver que onda como se ve.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </section>
     <div class="bt-wp">
         <a href="https://wa.me/542915244405" target="_blank" aria-label="Comunicate por WhatsApp">
