--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
 
     <footer></footer>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
